--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SOAP WEBSITE</title>
+    <link rel="stylesheet" href="style.css">
+   
 </head>
 <body>
     
+    <header class="header">
+        <a href="#" class="logo">Frosted Feather Soap Co.</a>
+        <nav class="navbar">
+            <a href="#">Products</a>
+            <a href="#">Gallery</a>
+            <a href="#">About</a>
+            <a href="#"><span class="material-symbols-outlined">
+                shopping_cart
+            </span></a>    
+        </nav>
+    </header>
+    <div>
+        <p class="introduction">
+            Ethically sourced, handcrafted, artisan soap bars from Chicago, IL
+        </p>
+    </div>
 </body>
 </html>
